src/core-crm/objects/MessagingSession/MessagingSession.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>