src/core-crm/objects/MessagingSession/fields/Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_ID__c</fullName>
    <description>Shows the subject of the related Activity ID in a URL format which redirects to the Activity ID when clicked</description>
    <formula>HYPERLINK(&quot;/&quot; +  Activity_SF_ID__c,  Activity_Subject__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity ID</label>
    <type>Text</type>
</CustomField>