src/core-crm/objects/MessagingSession/fields/Activity_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_SF_ID__c</fullName>
    <description>Stores the related Salesforce Activity ID</description>
    <externalId>true</externalId>
    <label>Activity SF ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>