src/core-crm/objects/MessagingSession/fields/Activity_Subject__c.field-meta.xml
<CustomField>
    <fullName>Activity_Subject__c</fullName>
    <description>Stores the related Activity Subject</description>
    <label>Activity Subject</label>
    <length>18</length>
    <type>Text</type>
</CustomField>