src/core-crm/objects/MessagingSession/fields/Message_Issue__c.field-meta.xml
<CustomField>
    <fullName>Message_Issue__c</fullName>
    <label>Message Issue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>