src/core-crm/objects/MessagingSession/fields/Message_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Message_Resolution__c</fullName>
    <label>Message Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>