src/core-crm/objects/MessagingSession/fields/Message_Session_Issue__c.field-meta.xml
<CustomField>
    <fullName>Message_Session_Issue__c</fullName>
    <description>Summary of the issue</description>
    <label>Message Session Issue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>