src/core-crm/objects/MessagingSession/fields/Message_Session_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Message_Session_Resolution__c</fullName>
    <description>Summary of the resolution</description>
    <label>Message Session Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>