src/core-crm/objects/MessagingSession/fields/Message_Session_Summary__c.field-meta.xml
<CustomField>
    <fullName>Message_Session_Summary__c</fullName>
    <description>Summary of the message session</description>
    <label>Message Session Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>