src/core-crm/objects/MessagingSession/fields/Message_Summary__c.field-meta.xml
<CustomField>
    <fullName>Message_Summary__c</fullName>
    <label>Message Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>