src/core-crm/objects/MessagingSession/fields/Messaging_Session_Wrap_Up_Code__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Session_Wrap_Up_Code__c</fullName>
    <description>Captures the outcome of the voice call</description>
    <label>Messaging Session Wrap Up Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Enquiry</fullName>
            </value>
            <value>
                <fullName>Existing Enquiry</fullName>
            </value>
            <value>
                <fullName>Transferred Chat</fullName>
            </value>
            <value>
                <fullName>Escalation Transfer</fullName>
            </value>
            <value>
                <fullName>Invalid Enquiry</fullName>
            </value>
            <value>
                <fullName>SPAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>