src/core-crm/objects/MessagingSession/fields/Supplied_QUT_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Supplied_QUT_Employee_ID__c</fullName>
    <description>Employee Identifier</description>
    <externalId>true</externalId>
    <inlineHelpText>Employee Identifier</inlineHelpText>
    <label>Supplied QUT Employee ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>