src/core-crm/objects/MessagingSession/validationRules/Related_Contact_and_Lead_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Related_Contact_and_Lead_Validation</fullName>
    <active>true</active>
    <description>Lead and Contact cannot be linked to the Messaging Session at the same time.</description>
    <errorConditionFormula>AND(
	OR (
		ISNEW(),
		OR (
			ISCHANGED(Related_Contact__c),
			ISCHANGED(Related_Lead__c)
		)
	),
	NOT(ISBLANK(Related_Contact__c)),
	NOT(ISBLANK(Related_Lead__c))
)</errorConditionFormula>
    <errorMessage>Lead and Contact cannot be linked to the Messaging Session at the same time.</errorMessage>
</ValidationRule>